--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^1.3.2
   google_fonts: ^2.1.1
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
