--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_native_splash: ^1.3.2
   google_fonts: ^2.1.1
   flutter_spinkit: ^5.1.0
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
