--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^2.1.1
   flutter_spinkit: ^5.1.0
   animated_text_kit: ^4.2.1
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
