--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   animated_text_kit: ^4.2.1
   provider: ^6.0.1
+  animate_do: ^2.0.0
 
 dev_dependencies:
   flutter_test:
