--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animate_do: ^2.0.0
   flutter_svg: ^1.0.0
   url_launcher: ^6.0.17
+  scrollable_positioned_list: ^0.2.3
 
 dev_dependencies:
   flutter_test:
