--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.17
   scrollable_positioned_list: ^0.2.3
   syncfusion_flutter_gauges: ^19.4.40
+  flutter_screenutil: ^5.0.2
 
 dev_dependencies:
   flutter_test:
