--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   url_launcher: ^6.0.17
   scrollable_positioned_list: ^0.2.3
   syncfusion_flutter_gauges: ^19.4.40
-
+  auto_size_text: ^3.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
