--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   syncfusion_flutter_gauges: ^19.4.40
   auto_size_text: ^3.0.0
   auto_animated: ^3.0.1
+  firebase_core: ^1.11.0
+  firebase_storage: ^10.2.5
   
 dev_dependencies:
   flutter_test:
@@ -72,8 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
-    - assets/images/
-
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
