--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,14 @@ dependencies:
   flutter_svg: ^1.0.0
   url_launcher: ^6.0.17
   scrollable_positioned_list: ^0.2.3
-  syncfusion_flutter_gauges: ^19.4.40
+  syncfusion_flutter_gauges: ^19.4.43
   auto_size_text: ^3.0.0
   auto_animated: ^3.0.1
   firebase_core: ^1.11.0
   firebase_storage: ^10.2.5
-  
+  syncfusion_flutter_pdfviewer: ^19.4.43-beta
+  syncfusion_flutter_core: ^19.4.43+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,7 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
-    
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
