--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   path_provider: ^2.0.8
   universal_io: ^2.0.4
   permission_handler: ^8.3.0
-
+  fluttertoast: ^8.0.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
